# pydab

./: .pre-commit-config.yaml  .yamllint.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: release.yml
src/pydab/: __init__.py  cli.py  logging.yaml  pydab.py  util.py
test/: test_cases.py  test_pydab.py
test/data/: case1.dab  case2.dab
