[metadata]
name = pydab
version = 0.0.0-dev
author = Remy Liu
author_email = liurenmi@msu.edu
description = A Python package for modifying and converting DAB files
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/krishnanlab/pydab

# License
license_files = file: LICENSE
license = MIT

# Search tags
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
keywords =
    Network Data Conversion

[options]
install_requires =
    numpy

zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pecanpy = pydab.cli:main
